# RSR-core

./: .gitattributes  .gitignore  ALGORITHM.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
benchmarking/bit_1/: bench_shapes_cpu.py  bench_shapes_cuda.py  plot.py  plot_results.py  run_cpu.py  run_cpu_nonsquare.py  run_cuda.py  run_cuda_nonsquare.py
benchmarking/bit_1/reports/: results.csv  results_cuda.csv
benchmarking/bit_1_58/: bench_best_k.py  bench_shapes_cpu.py  bench_shapes_cuda.py  plot.py  plot_results.py  run_cpu.py  run_cpu_nonsquare.py  run_cuda.py  run_cuda_nonsquare.py
benchmarking/bit_1_58/reports/: best_k_cpu.json  best_k_cuda.json  results.csv
benchmarking/llms/: bench_inference.py
docs/: ALGORITHM.md  OPTIMIZATION.md
integrations/hf/: model_infer.py  model_prep.py
kernels/bit_1/cpu/: Makefile  bitnet_i2s.c  bitnet_official.c  rsr.c  rsr_prep.c  rsr_prep_nonsquare.c  rsr_v2_4.c  rsr_v4_2.c  tmac_binary.c
kernels/bit_1/cuda/: rsr_v4_10.cu  rsr_v5_6.cu  rsr_v5_8.cu  rsr_v5_9.cu
kernels/bit_1_58/cpu/: Makefile  bitnet_ternary.c  rsr_ternary.c  rsr_ternary_prep.c  (+11 more)
multiplier/: base.py
multiplier/bit_1/: base.py  pytorch.py  rsr_py.py
multiplier/bit_1_58/: pytorch.py  rsr_py.py
tests/: test_model_infer.py  test_model_prep.py  test_rsr.py  test_ternary_bitblas_cuda.py  test_ternary_bitnet_cuda.py  test_ternary_rsr.py  test_ternary_rsr_cuda.py
ui/: start.sh
ui/backend/: main.py  requirements.txt
ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
(+71 files in other folders)
